--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Playfair+Display&family=Poppins:wght@200;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 * {
   margin: 0;
@@ -14,93 +14,88 @@ main {
   box-shadow: 3px 3px 3px gray, -3px -3px 3px rgb(34, 100, 100);
 }
 
-.toDo-title {
+.heading {
   display: flex;
+  width: 92%;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 15px;
   background-color: #fff;
   border-radius: 8px 8px 0 0;
 }
 
-.fa-arrows-rotate {
-  font-size: 20px;
-  padding-right: 15px;
+.reload-icon {
+  cursor: pointer;
+  font-size: 15px;
+  padding-right: 0;
 }
 
-.addInput {
+form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 10px;
+  padding-bottom: 15px;
+}
+
+.new-task {
   width: 80%;
   padding: 10px;
   margin-left: 17px;
   border: none;
-}
-
-.display-list {
-  justify-content: space-between;
-  align-items: center;
-}
-
-.fa-ellipsis-vertical {
-  padding-left: 65px;
-  font-size: 20px;
-  vertical-align: middle;
-}
-
-.checkbox {
-  margin-left: 10px;
-  height: 20px;
-  width: 20px;
-  vertical-align: middle;
-}
-
-.input {
-  width: 78%;
-  padding: 10px;
-  margin-left: 5px;
-  font-size: 16px;
-  border: none;
-  vertical-align: middle;
-}
-
-.fa-arrow-right-to-bracket {
-  font-size: 20px;
-  padding-right: 15px;
-}
-
-.toDo-add {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-}
-
-.arrow-back-circle {
-  font-size: 30px;
-}
-
-li {
-  list-style: none;
-  padding: 10px;
-}
-
-.toDo-list {
-  justify-content: space-between;
-  align-items: center;
-}
-
-span {
-  padding-right: 10px;
+  outline: none;
 }
 
 ::placeholder {
+  padding-left: 5px;
   font-size: 16px;
 }
 
-.clearBtn {
+.fa-right-from-bracket {
+  padding-right: 40px;
+}
+
+.tasks-container {
+  align-items: center;
   width: 100%;
 }
 
-.btn {
+.task {
+  display: flex;
+  justify-content: space-between;
+  vertical-align: middle;
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  height: 10px;
+  padding: 20px;
+}
+
+.delete-icon {
+  cursor: pointer;
+  color: rgba(255, 0, 0, 0.907);
+}
+
+.editable {
+  cursor: text;
+}
+
+.list-title {
+  margin-left: 20px;
+}
+
+.task .left-side {
+  display: flex;
+  column-gap: 10px;
+  margin-left: 15px;
+}
+
+.task .right-side {
+  margin-right: 15px;
+}
+
+.completed-container {
   width: 100%;
   display: block;
   border: none;
@@ -112,4 +107,33 @@ span {
   text-align: center;
   color: #000;
   border-radius: 0 0 8px 8px;
+}
+
+.completed-text {
+  border: none;
+  font-size: 16px;
+  color: #000;
+  background-color: rgba(211, 211, 211, 0.96);
+  cursor: pointer;
+}
+
+.completed-text:hover {
+  text-decoration: underline;
+  color: rgba(0, 255, 255, 0.937);
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    margin: 0;
+    background-color: rgb(165, 218, 32);
+  }
+
+  #container {
+    width: 90%;
+    height: 90vh;
+  }
+
+  .new-task {
+    height: 20px;
+  }
 }
